apps/local/coder/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coder-route
spec:
  parentRefs:
  - name: eg-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "coder.${domain_name}"
  - "*.coder.${domain_name}"
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: coder-backend
      port: 80
